--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "nuxt-buefy": "^0.4.4"
+    "nuxt-buefy": "^0.4.4",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
