--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
     "nuxt-buefy": "^0.4.4",
+    "svg.js": "^2.7.1",
     "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
